kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-proba-service
spec:
  selector:
    app: go-proba
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080  # Port on which your application listens inside the pod
  type: ClusterIP
