kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.global-static-ip-name: "34.128.173.45"
    cert-manager.io/issue-temporary-certificate: "true"
spec:
  tls:
  - hosts:
    - corvus.iz.rs
    secretName: tls-secret-corvus
  rules:
  - host: corvus.iz.rs
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-proba-service
            port:
              number: 80
